redirect to bkruse.com

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<b>Coming Soon</b>
+<html>
+  <head>
+    <title>Kruse Capital coming soon</title>
+    <META http-equiv="refresh" content="2;URL=http://bkruse.com">
+  </head>
+  <body bgcolor="#ffffff">
+    <center>
+	Kruse Capital coming soon - step on over to bkruse.com
+    </center>
+  </body>
+</html>
+
